--- a/diswipe/pubspec.yaml
+++ b/diswipe/pubspec.yaml
@@ -65,6 +65,9 @@ flutter:
     - assets/icons/delivery_icon.svg
     - assets/icons/swipeRight_icon.svg
     - assets/icons/swipeLeft_icon.svg
+    - assets/images/promotion_banner.png
+    - assets/images/goldChicken_coverImage.png
+    - assets/images/truffleBelly_coverImage.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
