--- a/diswipe/pubspec.yaml
+++ b/diswipe/pubspec.yaml
@@ -65,9 +65,14 @@ flutter:
     - assets/icons/delivery_icon.svg
     - assets/icons/swipeRight_icon.svg
     - assets/icons/swipeLeft_icon.svg
+    - assets/icons/swipe_icon.png
     - assets/images/promotion_banner.png
     - assets/images/goldChicken_coverImage.png
     - assets/images/truffleBelly_coverImage.png
+    - assets/images/ayam_geprek.jpg
+    - assets/images/paket_geprek.jpg
+    - assets/images/truffle_chicken_rice.jpg
+    - assets/images/truffle_fries.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
